--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             </tr>
             <tr>
                 <th>環境／クラウド</th>
-                <td>AWS(VPC, EC2, SES, IAM, API Gateway, Lambda、Cloudwatch、S3、VPC Endpoint)</td>
+                <td>AWS(VPC, EC2, SES, IAM, API Gateway, Lambda、Cloudwatch、S3、VPC Endpoint、Route53、LoadBalancer)</td>
             </tr>
             <tr>
                 <th>ツール／その他</th>
