--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Shintaro Hashimoto Personal Blog</title>
+    <meta name="description"
+        content="大学を卒業後、約10年間SIer及び社内SEにて、ネットワークエンジニアとして、NW環境の構築、運用を経験してきました。また、Globalチームと打ち合わせを行って、英語でPJを進めていました。現在は、SRE/Devopsエンジニアです。専門領域には、IaCツールであるTerraformとCloudFormationを使用したインフラの設計と実装、AWSを中心としたクラウドサービスの適用、そして構成管理ツールであるAnsibleとChefを用いた自動化が含まれます。シェルスクリプトとPythonを使用したカスタムスクリプトの作成も得意としており、Dockerを活用したコンテナ環境の構築と管理にも熟練しています。また、GithubActionsを使用したCI/CDパイプラインの実装経験もあります。フロントエンドとバックエンドの開発に関しても、PHPとJavaScriptを用いた実装経験があります。これらのスキルを活かし、チームと連携して、効果的かつ効率的なソリューションを提供することを常に目指しています。">
 </head>
 
 <body>
