--- a/cattoon/cartoon.html
+++ b/cattoon/cartoon.html
@@ -42,7 +42,7 @@
         </div>
 
         <div style="margin-top: 20px;">
-            <a href="../index.html">トップページに戻る</a>
+            <a href="http://neilaeden.com">トップページに戻る</a>
         </div>
     </div>
 
