--- a/sd/stablediffusion.html
+++ b/sd/stablediffusion.html
@@ -25,7 +25,7 @@
             <textarea cols="50" rows="5" placeholder="英語で複数の画像イメージを入力してください(単語間は、『,』で区切ってください)"></textarea>
             <br>
             <button id="generateImage">Ask Stable Diffusion</button>
-            <h5><a href="../index.html">トップページに戻る</a></h5>
+            <h5><a href="http://neilaeden.com">トップページに戻る</a></h5>
             <div id="generating-message" class="hidden">
                 <h2>画像生成中・・・</h2>
             </div>
