--- a/sd/stablediffusion.html
+++ b/sd/stablediffusion.html
@@ -12,6 +12,9 @@
     <!-- <video id="background-video" loop muted autoplay>
         <source src="Comp_11.mp4" type="video/mp4">
     </video> -->
+    <header>
+        <h1>Welcome to Stable Diffusion</h1>
+    </header>
 
     <div class="loader">
         <span></span>
@@ -97,6 +100,9 @@
                 });
         });
     </script>
+    <footer>
+        <p>&copy; 2023 Stable Diffusion. All Rights Reserved.</p>
+    </footer>
 </body>
 
 </html>
