--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <tr>
                 <th>環境／クラウド</th>
                 <td>AWS(VPC, EC2, SES, IAM, API Gateway, Lambda、Cloudwatch、S3、VPC
-                    Endpoint、Route53、LoadBalancer、CloudFront、Braket)</td>
+                    Endpoint、Route53、LoadBalancer、CloudFront、Braket、Sagemaker、ECR)</td>
             </tr>
             <tr>
                 <th>ツール／その他</th>
