--- a/cattoon/cartoon.html
+++ b/cattoon/cartoon.html
@@ -13,6 +13,10 @@
 </head>
 
 <body>
+    <header class="main-header">
+        <h1>Animation Style Conversion</h1>
+    </header>
+
     <div id="container">
         <div class="side" id="leftSide">
             <h4>Uploadする画像</h4>
@@ -35,6 +39,11 @@
 
     <div class="centered-elements">
         <a href="http://neilaeden.com" class="link">トップページに戻る</a>
+    </div>
+
+    <div class="design-section">
+        <h2>Design</h2>
+        <img src="system7.png" alt="SystemDesign">
     </div>
 
     <script>
@@ -102,6 +111,9 @@
             }
         }
     </script>
+    <footer class="main-footer">
+        <p>© 2023 Animation Converter. All rights reserved.</p>
+    </footer>
 </body>
 
 </html>
