--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <li><a href="/blog/">Bulletin Board</a></li>
                 <li><a href="./sd/stablediffusion.html">Generate Image(Stable Diffusion)</a></li>
                 <li><a href="/alien/">Ask Alien(Chat GPT)</a></li>
-                <li><a href="./cattoon/cartoon.html">Animation Style Conversion</a></li>
+                <li><a href="./cattoon/cartoon.html">Animation Style Conversion(AILAB)</a></li>
                 <li><a href="/sagemaker/">Sound Generator(SageMaker)(実装中)</a></li>
                 <li><a href="/quantum/">Sound Generator(Quamtum Computing)(実装中)</a></li>
             </ul>
