--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 <li><a href="./sd/stablediffusion.html">Generate Image(Stable Diffusion)</a></li>
                 <li><a href="/alien/">Ask Alien(Chat GPT)</a></li>
                 <li><a href="./cattoon/cartoon.html">Animation Style Conversion(AILAB)</a></li>
+                <li><a href="/predict/">動くヌコ(Sagemaker)</a></li>
                 <li><a href="/quantum/">Sound Generator(Quamtum Computing)(実装中)</a></li>
             </ul>
         </nav>
