--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 <li><a href="/alien/">Ask Alien(Chat GPT)</a></li>
                 <li><a href="./cattoon/cartoon.html">Animation Style Conversion(AILAB)</a></li>
                 <li><a href="/predict/">動くヌコ(Sagemaker)</a></li>
+                <li><a href="/natural/">Joke GPT(Sagemaker)</a></li>
                 <li><a href="/quantum/">Sound Generator(Quamtum Computing)(実装中)</a></li>
             </ul>
         </nav>
