--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
                 <li><a href="./cattoon/cartoon.html">Animation Style Conversion(AILAB)</a></li>
                 <li><a href="/predict/">動くヌコ(Sagemaker)</a></li>
                 <li><a href="/natural/">Joke GPT(Sagemaker)</a></li>
-                <li><a href="/cloth/">Fashion Generator(Sagemaker)</a></li>
+                <li><a href="/music/">Lyrics Generator(Sagemaker)</a></li>
+                <li><a href="/cloth/">推し顔 Generator(Sagemaker)</a></li>
                 <li><a href="/quantum/">Sound Generator(Quamtum Computing)(実装中)</a></li>
             </ul>
         </nav>
